--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -14,6 +14,7 @@ body {
   font-family: 'Red Hat Mono', sans-serif;
   background-color: var(--bg);
   overflow-x: hidden;
+  color: white;
 }
 
 /* Login page */
